[package]
name = "optional_struct"
version = "0.2.0"
authors = ["Paul Lesur <paul.lesur@plesur.fr>"]
description = """
Crate defining a macro that will generate, from a structure, another structure with only Option<T> fields
"""
readme = "README.md"
categories = ["config"]
keywords = ["macro", "configuration"]
license = "Apache-2.0"
repository = "https://github.com/pLesur/OptionalStruct"
exclude = [".travis.yml"]
edition = "2021"

[badges]
travis-ci = { repository = "pLesur/OptionalStruct", branch = "master" }

[dependencies]
syn = "0.11.11"
quote = "0.3"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[lib]
proc-macro = true


